fix(layout): restore scroll on sidebar with hidden scrollbar, remove duplicate header and button on projects page

--- a/app/globals.css
+++ b/app/globals.css
@@ -130,3 +130,11 @@
     @apply font-sans;
   }
 }
+
+@utility no-scrollbar {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+  &::-webkit-scrollbar {
+    display: none; /* Chrome, Safari and Opera */
+  }
+}
